tests/cases/compiler-development/artifact/errors/diagnostic-parser-mismatched-token-tree.diagnostic
diagnostic error code=P0001 family=parser message="mismatched delimiter in attribute arguments: expected ']', got ')'" sources=1 labels=2 notes=1 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-parser-mismatched-token-tree.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-parser-mismatched-token-tree.ari" bytes=41
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-mismatched-token-tree.ari" line=1 column=7 end_line=1 end_column=8 byte_start=6 byte_end=7 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-parser-mismatched-token-tree.ari:1:7\n   |\n 1 | @cfg([)\n   |       ^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-mismatched-token-tree.ari" line=1 column=6 end_line=1 end_column=7 byte_start=5 byte_end=6 message="opening delimiter expects ']'"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-parser-mismatched-token-tree.ari:1:6\n   |\n 1 | @cfg([)\n   |      ^"
  Note index=0 location=none message="close delimiters must match the most recent still-open delimiter"
